--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="Score : 0"
-        android:textSize="14sp"
+        android:textSize="24sp"
+        android:textStyle="bold"
         android:paddingLeft="10dp"
         android:gravity="center_vertical"/>
 
